fixing overflow

--- a/assets/css/_sass/partials/_syntax.scss
+++ b/assets/css/_sass/partials/_syntax.scss
@@ -1,4 +1,4 @@
-.highlight { background-color: #272935; color: underline; }
+.highlight { background-color: #272935; }
 .highlight pre { background-color: #272935; color: underline; }
 .highlight .ge { font-style: italic; }
 .highlight .gs { font-weight: bold; }
